--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,10 @@ python =
 
 [testenv]
 deps =
+  -rrequirements.txt
   -rtest-requirements.txt
 
 commands=
-  py.test {posargs}
+  py.test --verbose \
+    --cov {envsitepackagesdir}/titan --cov-report term-missing --cov-report html \
+    {posargs}
