--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ sudo: false
 language: python
 cache: pip
 
-python:
-- 2.7
-- 3.6
-- 3.7
+matrix:
+  include:
+    - python: 2.7
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
 
 install: pip install tox-travis python-coveralls
 script: tox
