--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ sudo: false
 language: python
 cache: pip
 
-matrix:
-  include:
-    - python: 2.7
-    - python: 3.6
+python:
+- 2.7
+- 3.6
 
 install: pip install tox-travis python-coveralls
 script: tox
