Remove pbr dependency, add setup.py and reformat tox tests

--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,12 @@ python =
 
 [testenv]
 deps =
-  -rrequirements.txt
-  -rtest-requirements.txt
+  -rtests/requirements.txt
 
 commands=
-  py.test --verbose \
-    --cov {envsitepackagesdir}/titan --cov-report term-missing --cov-report html \
+  pytest \
+    --verbose \
+    --cov {envsitepackagesdir}/titan \
+    --cov-report term-missing \
+    --cov-report html \
     {posargs}
