--- a/setup.cfg
+++ b/setup.cfg
@@ -1,34 +1,12 @@
-[metadata]
-name = titan-moon
-author = Benoit Seignovert
-author-email = support.git@seignovert.fr
-summary = Python package to get Titan orbital parameters.
-description-file = README.rst
-description-content-type = text/x-rst; charset=UTF-8
-home-page = http://github.com/seignovert/python-titan-moon
-license = MIT
-keywords = nasa, cassini, titan
-classifier =
-    Development Status :: 4 - Beta
-    Intended Audience :: Science/Research
-    Natural Language :: English
-    License :: OSI Approved :: MIT License
-    Programming Language :: Python
-    Programming Language :: Python :: 3.6
-    Topic :: Scientific/Engineering
-    Topic :: Scientific/Engineering :: Astronomy
+[bumpversion]
+current_version = 0.1.0
+commit = True
+tag = True
+tag_name = {new_version}
 
-[files]
-packages =
-    titan
-
-[wheel]
-universal = 1
+[bumpversion:file:setup.py]
+[bumpversion:file:titan/__init__.py]
 
 [coverage:report]
 exclude_lines =
     def __repr__
-
-[entry_points]
-console_scripts =
-    titan-orbit = titan.cli:cli_orbit
